--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="space-y-4">
               <div class="flex items-center mb-4">
                 <label for="projectile-mode" class="text-sm font-medium mr-3"
-                  >Projectile Mode</label
+                  >2D Mode</label
                 >
                 <label class="toggle-switch">
                   <input type="checkbox" id="projectile-mode" />
