horizontal distance change in 2d mode

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                   s
                 </p>
                 <p>
-                  Displacement:
+                  <span id="output-d-1-label">Displacement</span>:
                   <span id="output-d-1" class="text-blue-600 font-mono">-</span>
                   m
                 </p>
@@ -323,7 +323,7 @@
                   s
                 </p>
                 <p>
-                  Horizontal Distance:
+                  <span id="output-d-2-label">Displacement</span>:
                   <span id="output-d-2" class="text-blue-600 font-mono">-</span>
                   m
                 </p>
