initial/final position and time

--- a/index.html
+++ b/index.html
@@ -93,6 +93,36 @@
                   placeholder="ex., 2"
                 />
               </div>
+              <div id="time-range-container" class="ml-4 mt-2 space-y-2">
+                <div>
+                  <label
+                    for="initial-time"
+                    class="block text-sm font-medium mb-1"
+                  >
+                    Initial Time [s]
+                  </label>
+                  <input
+                    type="number"
+                    id="initial-time"
+                    class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    placeholder="ex., 0"
+                  />
+                </div>
+                <div>
+                  <label
+                    for="final-time"
+                    class="block text-sm font-medium mb-1"
+                  >
+                    Final Time [s]
+                  </label>
+                  <input
+                    type="number"
+                    id="final-time"
+                    class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    placeholder="ex., 2"
+                  />
+                </div>
+              </div>
 
               <div>
                 <label for="displacement" class="block text-sm font-medium mb-1"
@@ -104,6 +134,36 @@
                   class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                   placeholder="ex., 100"
                 />
+              </div>
+              <div id="position-range-container" class="ml-4 mt-2 space-y-2">
+                <div>
+                  <label
+                    for="initial-position"
+                    class="block text-sm font-medium mb-1"
+                  >
+                    Initial Position [m]
+                  </label>
+                  <input
+                    type="number"
+                    id="initial-position"
+                    class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    placeholder="ex., 0"
+                  />
+                </div>
+                <div>
+                  <label
+                    for="final-position"
+                    class="block text-sm font-medium mb-1"
+                  >
+                    Final Position [m]
+                  </label>
+                  <input
+                    type="number"
+                    id="final-position"
+                    class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    placeholder="ex., 100"
+                  />
+                </div>
               </div>
 
               <div id="projectile-inputs-container" class="hidden space-y-4">
